# family-policy

./: .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  CODEBASE_REVIEW_SUMMARY.md  Cargo.toml  DESIGN.md  GITHUB_POLL_DESIGN.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  INSTALLATION.md  PACKAGING_SUMMARY.md  PRD-KIDS-TIME-LIMITS.md  PROGRESS.md  PROGRESS_UPDATE.md  README.md  REMOTE_MANAGEMENT_RESEARCH.md  REVIEW_REPORT.md  SIMPLE_REMOTE_DESIGN.md  browser-policy.yaml  example-config.yaml  example-time-limits-config.yaml  index.html  package.json  pnpm-lock.yaml
.cargo/: config.toml
.devcontainer/: .gitignore  Dockerfile  README.md  devcontainer.json
.github/: RELEASE_TEMPLATE.md  WORKFLOWS.md
.github/workflows/: release.yml
family-policy-ui/: README.md  package.json  pnpm-lock.yaml
family-policy-ui/src-tauri/: Cargo.toml  tauri.conf.json
family-policy-ui/src-tauri/src/: agent_config.rs  lib.rs  main.rs
packaging/: README.md
packaging/debian/: build-deb.sh
packaging/debian/DEBIAN/: control  postinst  postrm  prerm
packaging/linux/: family-policy-agent.service  install.sh  uninstall.sh
packaging/macos/: build-pkg.sh  com.family-policy.agent.plist  install.sh  uninstall.sh
packaging/rpm/: build-rpm.sh  family-policy.spec
packaging/windows/: README.md  install.ps1  uninstall.ps1
src/: App.vue  browser.rs  cli.rs  config.rs  main.rs  state.rs
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  cli.rs  config.rs  main.rs  state.rs
src-tauri/src/agent/: config.rs  daemon.rs  mod.rs  poller.rs  scheduler.rs  state.rs
src-tauri/src/commands/: agent.rs  config.rs  local.rs  mod.rs  utils.rs
src-tauri/src/core/: apply.rs  diff.rs  mod.rs  privileges.rs
src-tauri/src/platform/: linux.rs  windows.rs
src-tauri/src/policy/: chrome.rs  chromium_common.rs  edge.rs
src-tauri/src/ui/: admin.rs  admin_commands.rs  config_bridge.rs  mod.rs  user.rs  user_commands.rs
src-ui/: App.vue
src/agent/: config.rs  daemon.rs  mod.rs  state.rs
src/commands/: agent.rs  local.rs  mod.rs  time_limits.rs
src/components/: UserStatus.vue
src/platform/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/policy/: chrome.rs  chromium_common.rs  edge.rs  firefox.rs  mod.rs
src/time_limits/: auth.rs  config.rs  enforcement.rs  mod.rs  scheduler.rs  state.rs  tracker.rs
src/time_limits/platform/: linux.rs  macos.rs  mod.rs  windows.rs
wix/: License.rtf  main.wxs
