[package]
name = "family-policy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
directories = "6.0.0"
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
url = "2.5.7"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.8.0"

[dev-dependencies]
assert_fs = "1.1.3"
predicates = "3.1.3"
tempfile = "3.23.0"
